--- a/css/gushi.css
+++ b/css/gushi.css
@@ -21,6 +21,7 @@ body{
 	background-size: 60% auto;
 	background-position: center;
 	animation:jiantou 2s linear infinite;
+	-webkit-animation: jiantou 2s linear infinite;
 }
 @keyframes jiantou{
 	0%{
@@ -33,22 +34,37 @@ body{
 	bottom: 6px;	
 	}
 }
+
  .fade{
-animation: fade 2s linear 0.5s forwards;
+ animation: fade 2s linear 0.5s forwards;
+-webkit-animation: fade 2s linear 0.5s forwards;
 } 
  @keyframes fade{
 	0%{
 	opacity: 0;
     transform-origin: 50% 50%;
     transform: scale(2, 2);
+   -webkit-transform:scale(2, 2);
 	}	
 	100%{
 	opacity: 1;
     transform-origin: 50% 50%;
     transform: scale(1, 1);
+	-webkit-transform:scale(1, 1);
 	}
 } 
-
+@keyframes fade{
+			 0%{
+				 opacity: 0;
+				 transform-origin: 50% 50%;
+				 transform: scale(2, 2);
+			 }
+			 100%{
+				 opacity: 1;
+				 transform-origin: 50% 50%;
+				 transform: scale(1, 1);
+			 }
+		 }
 
 
 .swiper-container{
@@ -91,11 +107,13 @@ animation: fade 2s linear 0.5s forwards;
     opacity: 0;
     transform-origin: 50% 50%;
     transform: scale(1.5, 1.5);
+	-webkit-transform: scale(1.5, 1.5);
 }
 .ditu{
 	opacity: 0;
     transform-origin: center center;
-    transform: rotateZ(180deg); 
+    transform: rotateZ(180deg);
+	-webkit-transform: rotateZ(180deg); ;
 }
 .ditu img{
     width: 100%; 
@@ -132,7 +150,8 @@ animation: fade 2s linear 0.5s forwards;
 .school{
      opacity: 0;
     transform-origin: 50% 50%;
-    transform: scale(2, 2);   
+    transform: scale(2, 2);
+	-webkit-transform: scale(2, 2);
 }
 .school img{
 	height: 100%;
@@ -141,7 +160,8 @@ animation: fade 2s linear 0.5s forwards;
 .deng{
      opacity: 0;
     transform-origin: 50% 50%;
-    transform: scale(1.5, 1.5);   
+    transform: scale(1.5, 1.5);
+	-webkit-transform: scale(1.5, 1.5);
 }
 .deng img{
 	height: 100%;
@@ -159,26 +179,32 @@ animation: fade 2s linear 0.5s forwards;
 }
 .rotate1{
 	animation: rotatez  1s linear forwards;
+	-webkit-animation: rotatez  1s linear forwards;
 }
 .rotate2{
 	transform-style: preserve-3d;
 	 animation:rotatey 1s ease 0.5s forwards;
+	-webkit-animation:rotatey 1s ease 0.5s forwards;
 }
 .rotate3{
 	 transform-style: preserve-3d;
 	 animation:rotatex 1s ease 0.5s forwards;
+	-webkit-animation: rotatex 1s ease 0.5s forwards;
 }
 .rotate4{
 	 transform-style: preserve-3d;
 	 animation:scale1 3s linear 0.5s forwards;
+	-webkit-animation:scale1 3s linear 0.5s forwards;
 }
 .rotate5{
 	transform-style: preserve-3d;
 	 animation:bounc 1s ease 0.5s forwards;
+	-webkit-animation:bounc 1s ease 0.5s forwards;
 }
 .rotate6{
 	transform-style: preserve-3d;
 	 animation:tasnslate1 1s ease 0.5s forwards;
+	-webkit-animation: tasnslate1 1s ease 0.5s forwards;
 }
 .last{
 	background-size: 100% 100%;
@@ -212,7 +238,9 @@ animation: fade 2s linear 0.5s forwards;
 	margin-top: 30px;
 	 opacity: 0;
     transform-origin: 50% 50%;
+	-webkit-transform-origin: 50% 50%;
     transform: scale(1.5, 1.5);
+	-webkit-transform: scale(1.5, 1.5);
 }
 .erweima img{
 	display: block;
@@ -241,41 +269,6 @@ animation: fade 2s linear 0.5s forwards;
     width: 50%;
 	margin: 0 auto;
 }
-
-/* @keyframes rotatey{
-	0%{
-	opacity: 0;
-    transform-origin: center center;
-    transform: rotateY(0deg);
-	 transform-origin:center;
-	}
-	25%{
-	opacity: 1;
-    transform-origin: center center;
-    transform: rotateY(-100deg);
-    	 transform-origin:center;
-	}	
-	50%{
-	opacity: 1;
-    transform-origin: center center;
-    transform: rotateY(0deg);
-    	 transform-origin:center;
-	}
-	75%{
-	opacity: 1;
-    transform-origin: center center;
-    transform: rotateY(100deg);
-    	 transform-origin:center;
-	}
-	100%{
-	opacity: 1;
-    transform-origin: center center;
-    transform: rotateY(0deg);
-    	 transform-origin:center;
-	}
-}
- */
-
 
 @keyframes rotatey{
 0% {
@@ -330,21 +323,27 @@ animation: fade 2s linear 0.5s forwards;
 @keyframes rotatez{
 	0%{
 	opacity: 0;
-    transform-origin: center center;
+
+	transform-origin: center center;
     transform: rotateZ(180deg);
+	-webkit-transform-origin: center center;
+	-webkit-transform: rotateZ(180deg);
 	}	
 	100%{
 	opacity: 1;
     transform-origin: center center;
     transform: rotateZ(360deg);
+	-webkit-transform-origin: center center;
+	-webkit-transform: rotateZ(360deg);
 	}
 } 
 @keyframes scale1{
 	0% {
     opacity: 0;
     transform-origin: 50% 50%;
-    transform: scale(1.5, 1.5);   
-}
+    transform: scale(1.5, 1.5);
+	-webkit-transform: scale(1.5, 1.5);
+	}
 
 100% {
     opacity: 1;
